style.css
body{
    padding: 0px;
    margin: 0px;
}
img{
    display:inline-block;
}
.icon{
    height:18px;
}
#top-nav{
    border-top: 2px;
    border-color: black;
    display:inline-block;
}
#top-nav>div, #links>a{
    display:inline-flex;
    justify-content: center;
    align-items: center;
}
#logo{
    padding:18px;
    background-color:#e60012;
    justify-content: center;
    align-items: center;
}
#ntndo-logo{
    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(195deg) brightness(107%) contrast(102%);
}
#logo svg{
    color:white;
}
#search{
    width:450px;
    justify-content: center;
    align-items: center;
}
#links{
    display:flex;
    width:521px;
    justify-content: center;
    align-content: center;
}

